name:                Himage
version:             0.1.0.0
synopsis:            Haskell image editing library
description:         Please see README.md
homepage:            https://github.com/MajronMan/Himage#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksandra Mnich and Miron Markowski
maintainer:          miron.markowski@gmail.com
copyright:           2016 Aleksandra Mnich and Miron Markowski
category:            Image
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Filters.Figures,
                       IO.Arrays
  other-modules:       Filters.Effects, Filters.General, Filters.Stencils,
                       Filters.Types, IO.Files
  build-depends:       base >= 4.7 && < 5.0, repa, repa-io,
                       transformers, JuicyPixels
  default-language:    Haskell2010

executable Himage-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Himage
  default-language:    Haskell2010

test-suite Himage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , repa-io
                     , repa
                     , transformers
                     , JuicyPixels
                     , Himage
                     , HUnit
                     , hspec
                     , QuickCheck
                     , parsec
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MajronMan/Himage
